# nexus-cli

./: .gitignore  .goreleaser.yaml  Dockerfile  Makefile  README.md  deps.ini  deps.toml  go.mod  go.sum  nexus-dl.py  nexus.py  pyproject.toml
.github/: copilot-instructions.md  nexus-api-reference.md
.github/instructions/: nexusapi.instructions.md
cmd/nexuscli-go/: cleanup_bug_test.go  deps_test.go  main.go  main_test.go  sync_recursive_test.go
docs/: package-structure-analysis.md  package-structure-summary.md  refactoring-checksum-validation.md  refactoring-code-duplication.md  refactoring-compression-archives.md  sonatype-nexus-repository-api.json  testing.md
internal/archive/: archive.go  format.go  format_test.go  test.go
internal/checksum/: validator.go  validator_test.go
internal/config/: config.go  config_test.go
internal/logger/: logger.go  logger_test.go
internal/nexus/: checksum.go  checksum_test.go  compress.go  compress_format.go  compress_format_test.go  compress_integration_test.go  compress_large_file_test.go  compress_progress_test.go  compress_test.go  config.go  config_test.go  download.go  glob_test.go  key_template.go  key_template_test.go  logger.go  logger_test.go  mock_server_test.go  nexus_download.go  (+10 more)
nexuscli/: __init__.py  __main__.py  nexus.py  nexus_download.py  nexus_upload.py
nexuscli-go/: .dockerignore  Dockerfile  README.md  config.go  config_test.go  event_test.go  filesystem.go  go.mod  go.sum  logger.go  logger_test.go  main.go  main_test.go  nexus_download.go  nexus_e2e_test.go  nexus_test.go  nexus_upload.go
(+29 files in other folders)
