[project]
name = "nexuscli"
version = "0.1.0"
description = "Nexus CLI with upload and download commands for Nexus RAW repositories."
authors = [
    { name = "tympanix", email = "tympanix@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests==2.32.5",
    "tqdm==4.67.1",
    "requests-toolbelt==1.0.0"
]

[project.scripts]
nexus = "nexuscli.nexus:main"

[tool.setuptools.packages.find]
include = ["nexuscli*"]

